# nilmtk

./: pyproject.toml
data/: co_test.h5  energy.h5  energy_complex.h5  random.h5
