[tool.poetry]
name = "nilmtk"
version = "0.1.0"
description = ""
authors = ["FelixS <felix.sievers@baind.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
hmmlearn = "^0.3.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
networkx = "^3.4.2"
ipython = "^8.29.0"
matplotlib = "^3.9.2"
tables = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
